name:                haskell-either-helpers
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/adarqui/haskell-either-helpers#readme
license:             BSD3
license-file:        LICENSE
author:              Andrew Darqui
maintainer:          andrew.darqui@gmail.com
copyright:           2016 Andrew Darqui
category:            Development
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Haskell.Helpers.Either
  build-depends:       base >= 4.7 && < 5
                     , either
                     , transformers
  ghc-options:         -Wall -Werror
  default-language:    Haskell2010

test-suite haskell-either-helpers-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       Haskell.Helpers.EitherSpec
  build-depends:       base
                     , hspec
                     , haskell-either-helpers
  ghc-options:         -Wall -Werror -O2 -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/adarqui/haskell-either-helpers
